--- a/src/index-components/each/Each.css
+++ b/src/index-components/each/Each.css
@@ -16,7 +16,10 @@
     
     .whois {
 
-        width: 100%;
+        position: relative;
+        flex-grow: 1;
+        z-index: 1;
+        width: 75%;
         height: auto;
         display: flex;
         align-items: flex-start;
@@ -51,6 +54,7 @@
 
                 font-weight: normal;
                 font-size: clamp(.95em, 2vw, 1.15em);
+                line-height: clamp(1.618em, 3.2vw, 1.86em);
 
                 strong {
 
@@ -68,6 +72,7 @@
 
     .picture {
 
+        position: relative;
         width: 15em;
         height: 100%;
         display: flex;
