--- a/src/index-components/header/Header.css
+++ b/src/index-components/header/Header.css
@@ -2,7 +2,6 @@
 header {
 
     width: calc(100% - 4em);
-    height: 10em;
     font-family: Urbanist;
     display: flex;
     align-items: center;
@@ -12,6 +11,23 @@ header {
     padding-right: 5em;
     padding-top: 1em;
     padding-bottom: 1em;
+
+    h1 {
+
+        font-family: Urbanist;
+        font-weight: 600;
+        font-size: clamp(2.5em, 2.7vw, 3em);
+        margin: 0;
+        padding: 0;
+        color: inherit;
+
+        strong {
+
+            font-weight: 900;
+
+        }
+
+    }
 
     ul  {
 
@@ -31,6 +47,7 @@ header {
             list-style: none;
             margin-right: 1em;
             cursor: pointer;
+            color: inherit;
             
             a {
 
